# CMake-

./: README.md
t2/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  install_manifest.txt
t2/src/: main.c
t3/: CMakeLists.txt~
t3/lib/: CMakeLists.txt  CMakeLists.txt~
t4/src/: CMakeLists.txt  CMakeLists.txt~  main.c
