PROJECT(HELLO)
 
# SET(SRC_LIST main.c)

# MESSAGE(STATUS "This is BINARY dir " ${HELLO_BINARY_DIR})
# MESSAGE(STATUS "This is SOURCE dir "${HELLO_SOURCE_DIR})

# ADD_EXECUTABLE(hello ${SRC_LIST})
ADD_SUBDIRECTORY(src bin)
INSTALL(FILES COPYRIGHT README DESTINATION share/doc/cmake/t2)
INSTALL(PROGRAMS runhello.sh DESTINATION bin)

# dir/ 意思是安装dir中的内容
INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/t2)
